--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,7 @@ jobs:
           check-latest: true
 
       - name: test
-        run: go build . && go test .
+        run: go build ./... && go test ./...
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
